--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 }
 
 :root{
-  --white: #ebebeb;
+  --white: #fff;
 }
 
 #root{
@@ -47,6 +47,7 @@ body{
   background-color: #fff;
   overflow: hidden;
   margin: 20px;
+  border: 1px solid #20264a;
 }
 
 .input{
@@ -162,8 +163,7 @@ body{
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  background: rgb(116,196,255);
-  background: radial-gradient(circle, rgb(75, 180, 255) 0%, rgba(28,126,238,1) 100%);
+  background-color: #283863;
   border-radius: 20px;
   padding-top: 20px;
   padding-bottom: 20px;
@@ -187,7 +187,7 @@ body{
   justify-content: center;
   padding: 15px 0 15px 0 ;
   margin-top: 15px;
-  background-color: #fff;
+  background-color: #3e59cd;
   border-radius: 20px;
   margin-bottom: 20px;
 }
@@ -242,14 +242,14 @@ body{
 
 .week-days p{
   text-align: center;
-  color: #333;
+  color: #fff;
   font-size: 14px;
 }
 
 .temp-week{
   text-align: center;
   width: 60px;
-  color: rgba(28,126,238,1);
+  color: #fff;
   font-size: 14px;
   font-weight: normal;
 }
@@ -257,11 +257,10 @@ body{
 .temp-week span{
   font-size: 20px;
   font-weight: bolder;
-  color: rgba(28,126,238,1);
 }
 
 .week-title{
-  color: #444;
+  color: #fff;
   margin: 15px;
   display: none;
 }
@@ -338,7 +337,7 @@ body{
     width: 80%;
     height: 100%;
     justify-content: space-between;
-    border-bottom: 1px solid #eee;
+    border-bottom: 1px solid #20264a;
     border-radius: 0;
   }
 
